--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <div class="container col s12 m3 l3 xl3">
           <div class="card-title">
-            <h4>Breakefast</h4>
+            <h4>Breakfast</h4>
           </div>
           <div class="card-image card-small animation">
             <a href="https://www.simplyrecipes.com/search?q=omelet"
